# study

./: .gitmodules  Readme.md  sample.txt
.github/workflows/: ci_workflow.yml  foo.yml  gha_workflow.yml  workflow-that-releases.yml  workflow.yml
ml/: .gitignore  Readme.md  Readme.txt  botchat.py  check_butterfly_dataset.py  ddpm.py  diff_train.py  latent_ddpm.py  preprocess_butterfly_dataset.py  scheduler.py  summarize-bookmarklet.js  toy_attention.py  toy_attention2.py  util.py  video_dream_sd.py  video_dream_vae.py
ml/avx/: CMakeLists.txt  avx-test.cpp
ml/cuda/: .gitignore  Readme.md  half_add.cu
ml/ggml-test/: .gitignore  CMakeLists.txt  large_add.cpp  logic_gate.cpp  logic_gate_refactored.cpp  logic_gate_with_quantized_weights_file.cpp  logic_gate_with_weights_file.cpp  main.cpp  safetensor_viewer.cpp  safetensors.hpp  simple_add.cpp  simple_addition.cpp  simple_addition_with_static_weights.cpp  train.py  train_logic_gate.py
